--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My portifolio Edited</title>
+    <title>My portifolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
