the last commit before hosting it

--- a/Gallery.html
+++ b/Gallery.html
@@ -34,16 +34,13 @@
     <div class="gallerywrap">
         <img src="back_10237991.png" class="srollback" id="backbtn">
         <div class="gallery">
-        
             <div class="galleryone">
-                <span><img src="Images/WhatsApp Image 2024-11-05 at 13.27.10.jpeg"></span>
-                <span><img src="Images/WhatsApp Image 2024-09-20 at 15.29.18 (1).jpeg"></span>
-                <span><img src="Images/WhatsApp Image 2024-09-18 at 16.45.45 (1).jpeg"></span>
-            </div>
-            <div class="galleryone">
-                <span><img src="Images/WhatsApp Image 2024-09-20 at 15.30.20.jpeg"></span>
-                <span><img src="Images/WhatsApp Image 2024-09-20 at 15.30.21 (1).jpeg"></span>
-                <span><img src="Images/WhatsApp Image 2024-11-05 at 13.27.09.jpeg"></span>
+                <img src="Images/WhatsApp Image 2024-11-05 at 13.27.10.jpeg">
+                <img src="Images/WhatsApp Image 2024-09-20 at 15.29.18 (1).jpeg">
+                <img src="Images/WhatsApp Image 2024-09-18 at 16.45.45 (1).jpeg">
+                <img src="Images/WhatsApp Image 2024-09-20 at 15.30.20.jpeg">
+                <img src="Images/WhatsApp Image 2024-09-20 at 15.30.21 (1).jpeg">
+                <img src="Images/WhatsApp Image 2024-11-05 at 13.27.09.jpeg">
             </div>
         </div>
         <img src="next-arrow_10117641.png" alt="" class="srollback" id="nextbtn">
