--- a/getintouch.html
+++ b/getintouch.html
@@ -26,9 +26,9 @@
         <button class="btn" id="btn">GET IN TOUCH</button>
         
     </div>
-    <div class="diagonalsplit2" id="comming-soon">
-        <img src="art-gallery-icon-13993 Background Removed.png" alt="" class="missionimg">
-        <p class="mission">REACH  <span>OUT!....</span></p>
+    <div class="diagonalsplit2" id="comming-soon1">
+        <img src="art-gallery-icon-13993 Background Removed.png" alt="" class="missionimg" id="modiimage">
+        <p class="mission" id="missionone">REACH  <span>OUT!....</span></p>
     </div>
     <div class="backend" id="backend">
         <div class="contactus">
