--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
         </ul>
         <img src="MY LOGO.png" class="logo">
         <ul class="navlist" id="secondlist">
-            <li><a href="HOME" class="item">GALLERY</a></li>
+            <li><a href="Gallery.html" class="item">GALLERY</a></li>
             <li><a href="index.html#education" class="item">EDUCATION</a></li>
         </ul>
         <div class="hamburger" id="hamburger">
@@ -28,7 +28,7 @@
     </div>
     <div class="diagonalsplit2" id="comming-soon">
         <img src="projects.png" alt="" class="missionimg">
-        <p class="mission">COMMING <span>SOON!....</span></p>
+        <p class="mission" id="mission_comming">COMMING <span>SOON!....</span></p>
     </div>
 
 
