--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="greeting">
             <h1>Hello!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, maiores aut? Cum libero et optio soluta officiis molestiae voluptatibus sed rerum reiciendis temporibus at sunt eligendi, quibusdam tempora quisquam dolorum!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quasi porro, cupiditate dolorum vitae reiciendis officiis. Dolores, quidem expedita. Molestiae, facilis adipisci rerum doloremque et modi voluptate repudiandae nostrum soluta?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quasi porro, cupiditate dolorum vitae reiciendis officiis. Dolores, quidem expedita. Molestiae, facilis adipisci rerum doloremque et This shows that the website is working thrroughtly.
 
             </p>
         </div>
