--- a/getintouch.html
+++ b/getintouch.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <ul class="navlist" id="navlist">
-            <li><a href="Index.html" class="item">HOME</a></li>
+            <li><a href="index.html" class="item">HOME</a></li>
             <li><a href="projects.html" class="item">PROJECTS</a></li>
             <li><a href="Hireme.html" class="item">HIRE ME</a></li>
         </ul>
