--- a/getintouch.html
+++ b/getintouch.html
@@ -16,7 +16,7 @@
         <img src="MY LOGO.png" class="logo">
         <ul class="navlist" id="secondlist">
             <li><a href="Gallery.html" class="item">GALLERY</a></li>
-            <li><a href="index.html" class="item">EDUCATION</a></li>
+            <li><a href="index.html#education" class="item">EDUCATION</a></li>
         </ul>
         <div class="hamburger" id="hamburger">
             <span class="bar"></span>
