--- a/Hireme.html
+++ b/Hireme.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hire Me</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -66,7 +68,7 @@
                 </div>
             </div>
             <div class="beforebox">
-                <div class="afrikanbabybook"><img src="./Images/afrikan baby book logo.jpeg" alt="" class="babybook"></div>
+                <div class="afrikanbabybook"><img src="./Images/solvitafricalogo.png" alt="" class="babybook"></div>
     
                 <div class="box">
                     <h2 class="boxhead"> Software Engineer at SolvIT Africa</h2>
